--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.6",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "ws": "^8.8.0"
   }
 }
