--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "server",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "./server/index.js",
     "scripts": {
         "start": "node ./server/index.js",
         "devstart": "nodemon ./server/index.js",
